feat(settings): allow user to enable/disable phone number formatting more easily

--- a/app/views/devise/registrations/_edit_user.html.erb
+++ b/app/views/devise/registrations/_edit_user.html.erb
@@ -347,7 +347,7 @@
 
         <div class="flex items-center gap-2 max-sm:mb-2">
           <%= check_box_tag 'format_as_you_type', '1', true, class: 'form-input-checkbox', data: { action: 'change->phone#toggleFormatting' } %>
-          <%= label_tag 'format_as_you_type', 'Format as you type', class: 'form-check-label text-sm' %>
+          <%= label_tag 'format_as_you_type', 'Format', class: 'form-check-label text-sm' %>
         </div>
       </div>
 
