fix(streak_card): only show motivational message in record streak card for current user

--- a/app/views/shared/_user_record_streak_card.html.erb
+++ b/app/views/shared/_user_record_streak_card.html.erb
@@ -34,7 +34,7 @@
     </div>
   </div>
 
-  <% if end_date == Date.today || end_date == Date.yesterday %>
+  <% if user == current_user && (end_date == Date.today || end_date == Date.yesterday) %>
     <p class="mt-2 text-soft text-sm">
       <% if end_date == Date.today %>
         Run again tomorrow to extend your record streak!
