--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -168,11 +168,11 @@
     <div class="form-group flex gap-x-2.5">
       <div class="form-input-toggle shrink-0" data-controller="toggle-checkbox" data-action="mousedown->toggle-checkbox#toggle">
         <span class="form-input-toggle-switch"></span>
-        <%= form.check_box :allow_comments, { checked: run.allow_comments?, class: 'sr-only', data: { toggle_checkbox_target: 'checkbox' } }, true, false %>
+        <%= form.check_box :allow_comments, { checked: run.allow_comments?, class: 'sr-only', id: 'run_enable_comments_checkbox', data: { toggle_checkbox_target: 'checkbox' } }, true, false %>
       </div>
       <div>
-        <%= form.label :allow_comments, 'Enable comments?', class: 'select-none text-slate-700 dark:text-slate-300' %>
-        <p class="my-1 help-text">This allows other users to post comments on this run.</p>
+        <%= form.label :allow_comments, 'Allow comments', class: 'select-none text-slate-700 dark:text-slate-300', for: 'run_enable_comments_checkbox' %>
+        <p class="help-text">This allows other users to post comments on this run.</p>
       </div>
     </div>
 
