--- a/app/views/users/_edit_settings.html.erb
+++ b/app/views/users/_edit_settings.html.erb
@@ -125,22 +125,22 @@
       <div class="flex gap-x-2.5">
         <div class="form-input-toggle shrink-0" data-controller="toggle-checkbox" data-action="mousedown->toggle-checkbox#toggle">
           <span class="form-input-toggle-switch"></span>
-          <%= settings_form.check_box :show_pinned_pages_menu, { checked: @user.show_pinned_pages_menu?, class: 'sr-only', data: { toggle_checkbox_target: 'checkbox' } }, true, false %>
+          <%= settings_form.check_box :show_pinned_pages_menu, { checked: @user.show_pinned_pages_menu?, class: 'sr-only', id: 'show_pinned_pages_menu_settings_checkbox', data: { toggle_checkbox_target: 'checkbox' } }, true, false %>
         </div>
         <div>
-          <%= settings_form.label :show_pinned_pages_menu, 'Show pinned shortcuts menu', class: 'select-none text-slate-700 dark:text-slate-300' %>
-          <p class="my-1 help-text">Show the pinned shortcuts menu in the top right corner of the app on mobile devices.</p>
+          <%= settings_form.label :show_pinned_pages_menu, 'Pinned shortcuts menu', class: 'select-none text-slate-700 dark:text-slate-300', for: 'show_pinned_pages_menu_settings_checkbox' %>
+          <p class="help-text">Show the pinned shortcuts menu in the top right corner of the app on mobile devices.</p>
         </div>
       </div>
 
       <div class="flex gap-x-2.5">
         <div class="form-input-toggle shrink-0" data-controller="toggle-checkbox" data-action="mousedown->toggle-checkbox#toggle">
           <span class="form-input-toggle-switch"></span>
-          <%= settings_form.check_box :show_pinned_pages_list, { checked: @user.show_pinned_pages_list?, class: 'sr-only', data: { toggle_checkbox_target: 'checkbox' } }, true, false %>
+          <%= settings_form.check_box :show_pinned_pages_list, { checked: @user.show_pinned_pages_list?, class: 'sr-only', id: 'show_pinned_pages_list_settings_checkbox', data: { toggle_checkbox_target: 'checkbox' } }, true, false %>
         </div>
         <div>
-          <%= settings_form.label :show_pinned_pages_list, 'Show pinned shortcuts list', class: 'select-none text-slate-700 dark:text-slate-300' %>
-          <p class="my-1 help-text">Show the pinned shortcuts list in the sidebar on desktop devices.</p>
+          <%= settings_form.label :show_pinned_pages_list, 'Pinned shortcuts list', class: 'select-none text-slate-700 dark:text-slate-300', for: 'show_pinned_pages_list_settings_checkbox' %>
+          <p class="help-text">Show the pinned shortcuts list in the sidebar on desktop devices.</p>
         </div>
       </div>
     </div>
