--- a/app/views/users/_edit_settings.html.erb
+++ b/app/views/users/_edit_settings.html.erb
@@ -195,7 +195,7 @@
   >
     <div class="flex flex-col space-y-1.5 text-center sm:text-left">
       <h2 class="text-lg font-semibold leading-none tracking-tight">Reset Settings?</h2>
-      <p class="text-soft text-sm">Are you sure you want to reset your settings? <span class="underline underline-offset-2 font-semibold">This action cannot be undone</span>.</p>
+      <p class="text-soft text-sm">Are you sure you want to reset your settings to their defaults? <span class="underline underline-offset-2 font-semibold">This action cannot be undone</span>.</p>
     </div>
 
     <div class="flex flex-col-reverse sm:flex-row sm:justify-end sm:space-x-2 mt-4">
