--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -16,6 +16,11 @@
         <span>Account</span>
       </button>
 
+      <button type="button" id="linkedAccountsTab" data-tabs-target="btn" data-action="mousedown->tabs#select" class="btn-tab <%= params[:tab] == 'linkedAccountsTab' ? 'btn-tab-active' : '' %>">
+        <%= inline_svg_tag 'icons/user-group.svg', class: 'size-3.5 md:size-4.5' %>
+        <span>Linked Accounts</span>
+      </button>
+
       <button type="button" id="settingsTab" data-tabs-target="btn" data-action="mousedown->tabs#select" class="btn-tab <%= params[:tab] == 'settingsTab' ? 'btn-tab-active' : '' %>">
         <%= inline_svg_tag 'icons/settings.svg', class: 'size-4 md:size-5' %>
         <span>Settings</span>
@@ -40,6 +45,10 @@
 
   <div id="accountTab" data-tabs-target="tab" class="mb-24 <%= params[:tab].blank? || params[:tab] == 'accountTab' ? '' : 'hidden' %>">
     <%= render 'edit_user' %>
+  </div>
+
+  <div id="linkedAccountsTab" data-tabs-target="tab" class="mb-24 <%= params[:tab] == 'linkedAccountsTab' ? '' : 'hidden' %>">
+    <%= render 'users/linked_accounts' %>
   </div>
 
   <div id="settingsTab" data-tabs-target="tab" class="mb-24 <%= params[:tab] == 'settingsTab' ? '' : 'hidden' %>">
