--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -99,7 +99,7 @@
         <% else %>
           <div class="flex flex-col items-center justify-center gap-4 my-24 md:my-32">
             <p class="font-semibold">No recent Strava activities</p>
-            <p class="text-soft text-center text-sm text-pretty md:max-w-[70%]">No activities have been imported from Strava recently. You can manually import Strava activities from your <%= link_to 'settings', edit_user_registration_path, class: 'btn-link' %>.</p>
+            <p class="text-soft text-center text-sm text-pretty md:max-w-[70%]">No activities have been imported from Strava recently. You can manually import Strava activities from your <%= link_to 'settings', edit_user_registration_path(tab: 'linkedAccountsTab'), class: 'btn-link' %>.</p>
           </div>
         <% end %>
         </div>
