--- a/app/views/users/_runs.html.erb
+++ b/app/views/users/_runs.html.erb
@@ -43,15 +43,6 @@
       <% end %>
     <% end %>
 
-    <div class="mb-10 space-y-4 sm:space-y-6">
-      <% if @runs.present? %>
-        <%= render @runs %>
-      <% else %>
-        <div class="flex flex-col items-center justify-center gap-4 my-24 md:my-32">
-          <p class="font-semibold">No runs found</p>
-          <p class="text-soft text-center text-sm text-pretty md:max-w-[70%]">Sorry, we couldn&#8217;t find any runs in the selected date range.</p>
-        </div>
-      <% end %>
-    </div>
+    <%= render 'users/runs_list', runs: @runs %>
   </div>
 </div>
