--- a/app/views/users/_runs_list.html.erb
+++ b/app/views/users/_runs_list.html.erb
@@ -1,12 +1,10 @@
-<div class="flex flex-wrap items-center justify-between gap-6 pb-6 mt-10 border-b dark:border-slate-700">
-  <h1 class="heading"><%= @title %></h1>
-</div>
 <div class="mb-10 space-y-4 sm:space-y-6">
-  <% if @runs.present? %>
-    <%= render @runs %>
+  <% if runs.present? %>
+    <%= render runs %>
   <% else %>
-    <div class="flex flex-col items-center justify-center gap-6 py-12">
-      <p class="text-soft">No runs found for the selected date range.</p>
+    <div class="flex flex-col items-center justify-center gap-4 my-24 md:my-32">
+      <p class="font-semibold">No runs found</p>
+      <p class="text-soft text-center text-sm text-pretty md:max-w-[70%]">Sorry, we couldn&#8217;t find any runs in the selected date range.</p>
     </div>
   <% end %>
 </div>
